# OpenGL-Project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/Core/: GameInstance.h
include/GameGL/: Mesh.h  ShaderProgram.h  meshData.h
res/shaders/: default.vertex.glsl
src/: GameInstance.cpp  Mesh.cpp  ShaderProgram.cpp  main.cpp
